<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">我的铜板街</string>
    <string name="action_settings">Settings</string>
    <string name="versionName">版本号：%1$s</string>
    <string name="empty"></string>

    <string name="contact">您可以用微信"添加朋友"中的"搜号码"功能搜索"itongbanjie"来添加我们,直接与我们对话,我们也会通过微信推荐给您较热门的理财产品.</string>

    <string name="risk1">1、在购买铜板街理财产品之前，请您先根据自身实际情况认真填写本问卷，一边我们在了解您的风险承受能力的基础上界定您的风险类型，进而帮助您根据自身的风险承受能力选择合适的理财产品。</string>
    <string name="risk2">2、如果您的有关情况发生重大改变或距离上次填写时间超过一年，请重新填写本问卷。</string>
    <string name="risk3">3、如果您提供的资料不准确、不完整，或是您选择不填写本问卷，则可能对您投资风险承受能力评估以及理财产品推荐带来不利影响，铜板街对因此产生的所有后果不承担任何责任。</string>
    <string name="risk4">4、本问卷包括5个问题，每个问题根据您自身的实际情况只能选择一个选项。</string>
    <string name="risk5">5、本问卷的最终解释权归铜板街所有。您若对本问卷内容有任何疑问，请向铜板街客服咨询。</string>

    <string name="question1">1、您的生活各项开支（除投资外）占总收入的多少？</string>
    <string name="question2">2、您的投资金额相当于年收入的几倍？</string>
    <string name="question3">3、作为投资者，和其他人相比，您怎么评估您的投资经验？</string>
    <string name="question4">4、您的投资预期是？</string>
    <string name="question5">5、您认为自己能承受的最大投资损失是多少？</string>
    <string name="item_1_3">&#160;&#160;&#160;&#160;1.本说明书由杭州益∗资产管理有限公司（以下简称“本公司”或“资管公司”）制定并解释。本说明书仅为定向委托投资、收益计算、提取及查询等事项的简要说明，并不构成对相关当事人有法律约束力的文件。具体定向委托投资内容以《定向委托投资管理协议》为准。\n &#160;&#160;&#160;&#160;2.“铜宝”是杭州铜板街互联网金融信息服务有限公司（以下简称“铜板街”)为定向委托投资关系的委托人及受托人提供的信息居间服务产品，即受托人依据委托人的指令对合作机构推荐的理财产品（包括但不限于借款类产品、债权类产品、银行票据类产品、金融资产收益权类产品等）进行筛选、分散投资/出借、发起转让/赎回并获取投资收益。委托人加入的资金及其收益，在满足铜宝产品规则的前提下，可部分或全部转出。\n &#160;&#160;&#160;&#160;3.定向委托投资的各方参与人包括委托人、受托人、服务机构、合作机构等。\n &#160;&#160;&#160;&#160;委托人：指依据《定向委托投资管理协议》委托受托人进行定向投资的一方。\n &#160;&#160;&#160;&#160;受托人：指接受委托人委托将其委托资产定向投资于定向委托投资标的一方，即为资管公司。\n &#160;&#160;&#160;&#160;服务机构：指为定向委托投资业务提供信息发布、交易组织等交易辅助及中介等居间服务的机构，即铜板街。\n &#160;&#160;&#160;&#160;合作机构：是指向乙方提供或推荐定向委托投资标的的机构。\n</string>
    <string name="item_4_8" formatted="false">&#160;&#160;&#160;&#160;4.依据《定向委托投资管理协议》委托人自愿将合法所有的资金委托给资管公司投资于合作机构推荐的收益波动幅度低、信用风险低并且流动性良好的理财产品，包括但不限于合作机构推荐的应收账款类项目、抵押&#047;信用借款类项目、银行承兑汇票项目、以及银行、证券公司、支付公司等发行的现金管理类金融产品，证券公司、基金公司等发行的固定收益的短期或开放式理财产品，以及其他法律法规允许投资的流动性良好的短期金融工具等。\n其中银行、证券公司、支付公司等发行的现金管理类金融产品的投资比例不超过35%，证券公司、基金公司等发行的固定收益的短期或开放式理财产品的投资比例不超过25%，其它投资范围比例不高于40%。最终投资比例以受托方实际投资为准。\n &#160;&#160;&#160;&#160;5.委托人定向委托投资、提取定向委托投资的申请，即等同于委托资管公司追加、转让及赎回等同金额的定向委托投资标的。委托人在进行定向委托投资前应当已经正式注册成为铜板街平台的个人会员。\n &#160;&#160;&#160;&#160;6.委托人在T日通过服务机构向本公司提交有效定向委托投资申请，本公司在T日确认是否接受委托人定向委托投资并通过服务机构通知委托人。\n &#160;&#160;&#160;&#160;7.委托人单笔定向委托投资的最低金额为0.01 元，且可以以0.01 元为单位递增。委托人单笔定向委托投资金额不设上限。\n &#160;&#160;&#160;&#160;8.本协议项下，本公司暂不向委托人收取财富管理、提现管理等服务费用。本公司保留收费的权利，如另行调整收费标准，应及时将收费标准及明细公示或告知委托人。\n</string>
    <string name="item_9_10">&#160;&#160;&#160;&#160;9.受托人依据“每日计提、按日结转”的原则对定向委托投资标的进行每日收益计算和分配(相关收益在收益分配日即统一结转为新的投资款项，而不做实际分配)。\n &#160;&#160;&#160;&#160;10.委托人于T日提出有效定向委托投资申请，且本公司于T日确认接受委托的，委托投资资金的投资收益从T日开始计算，即投资收益起算日。委托人申请提取定向委托投资的当天不计算收益。\n</string>
    <string name="item_14_15">&#160;&#160;&#160;&#160;14.委托人可以提取的金额以本公司通过铜板街通知的依照定向委托投资资产价值（即当前价值）提供的可提取金额为限，并保留到小数点后面两位(即小数点后面两位之后的金额舍去)。\n &#160;&#160;&#160;&#160;15.对因作为委托投资标的管理人的银行、证券公司、基金管理公司、支付公司、合作商户等第三方机构支付迟延而造成的委托人提取定向委托投资实际兑付日的顺延，本公司不承担任何责任。\n</string>
    <string name="item_16_20">&#160;&#160;&#160;&#160;16.委托人于T日提出有效定向委托投资申请，且本公司于T日确认接受委托的，委托人可以于T日起通过铜板街平台查询定向委托投资成交情况，并可以于T+1 日起通过铜板街平台查询定向委托投资昨日收益。\n &#160;&#160;&#160;&#160;17.委托人选择快速到账的，委托人T日提出有效提取请求后，可以于T日通过铜板街平台查询提取申请办理、资金划付以及提取申请办理完成后届时委托人定向委托投资项下的定向委托投资资产价值情况；委托人选择普通到账的，委托人T日提出有效提取请求后，可以于T+1日通过铜板街平台查询提取申请办理、资金划付以及提取申请办理完成后届时委托人定向委托投资项下的定向委托投资资产价值情况。\n &#160;&#160;&#160;&#160;18.依据有关定向委托投资标的的每日收益情况，本公司将于每一日通过铜板街平台发布前一日定向委托投资的定向委托投资每万元收益、定向委托投资七日平均收益率及前一日委托人定向委托投资资产分配收益。\n &#160;&#160;&#160;&#160;19.本公司依据本规则提供的收益率、收益情况、定向委托投资资产价值情况仅供参考，并不代表委托人已经实现的投资本金和收益，实际兑付应当以定向委托投资标的项下相对应投资款项和收益兑付为条件。\n &#160;&#160;&#160;&#160;20.如定向委托投资总金额持续低于本公司预期金额且依据本公司合理判断持续该等定向委托投资在商业上已经不再经济合理或因国家法律、政策变动或监管要求等原因，本公司有权单方面解除定向委托投资关系，并依据委托人定向委托投资资产实际价值退回委托人定向委托投资资金，届时本公司应至少提前1个工作日通过铜板街公示/通知委托人定向委托投资项目终止事宜。\n</string>
    <string name="item_11"><u>&#160;&#160;&#160;&#160;11.本公司向委托人支付定向委托投资本金和收益的责任以定向委托投资标的项下本公司实际收到的投资本金和收益为限，本公司并不对委托人的委托投资资金本金和任何收益(包括任何预期收益)承担保证、保本承诺或任何责任。\n</u></string>
    <string name="item_12_13">&#160;&#160;&#160;&#160;12.委托人有权于每笔定向委托投资申请成功后要求提取全部或部分定向委托投资。\n &#160;&#160;&#160;&#160;13.委托人提取委托投资支持普通到账和快速到账两种方式，在特殊情况情况下本公司或铜板街可能调整两种到账方式的服务时间，具体时间以最新公告为准。\n &#160;&#160;&#160;&#160;13.1 快速到账：快速到账是指委托人提取的资金预计在委托人完成提取操作后的当日23:59前到账的提取方式；委托人选择快速到账的方式提取资金的，应当确保委托人单笔提取的资金最低为10元（含），最高为5万元（含），若委托人单笔提取的资金低于10元或高于5万元的，委托人将无法使用快速到账功能；快速到账功能仅在工作日的15:00前开通，委托人在休息日或法定节假日或工作日15:00后将无法使用快速到账功能；同时委托人理解并同意，若遇特殊情形，本公司有权提前关闭该项服务。本服务项下每位用户每天可使用快速到账提现功能的次数为5次。\n 示例：\n 快速到账规则\n</string>
    <string name="item_asserts_1" formatted="false">什么是铜宝？ “铜宝”是铜板街为定向委托投资关系的投资人及受托人提供的信息居间服务产品，即受托人依据投资人指令对合作机构推荐的理财产品（包括但不限于借款类产品、债权类产品、银行票据类产品、金融资产收益权类产品等）进行筛选、分散投资/出借、发起转让/赎回并获取投资收益。投资人加入的资金及其收益，在满足铜宝产品规则的前提下，可部分或全部转出。</string>
    <string name="item_asserts_2" formatted="false">温馨提示：铜宝转入及转出均无需手续费。 铜宝的收益如何计算？ 铜宝的当日收益=(铜宝中计息的份额/10000)＊铜宝万份收益  假设您计息的资金为9000元，当天的每万份收益为1.25元，代入计算公式，您当日的收益为：1.12元。 加入铜宝的资金投到哪里了？ 投资人加入铜宝的资金将分散投资于合作机构推荐的收益波动幅度低、信用风险低并且流动性良好的金融产品，并以上述产品的组合降低投资人的投资风险，各类产品匹配参照如下比例： 应收账款类 （如供应链保理、融资租赁、消费金融类产品） 不超过15% 抵押/信用借款类 （如车辆抵押贷款、经营贷款、个人信用借款等产品） 不超过15% 银行承兑汇票 （如铜票盈系列产品） 不超过10% 银行、证券公司、支付公司等发行的现金管理类金融产品\t不超过35% 证券公司、基金公司等发行的固定收益的短期或开放式理财产品 （如资产管理计划、银行理财产品、券商收益凭证等产品） 不超过25% 其他法律法规允许投资的流动性良好的短期金融工具</string>
    <string name="item_asserts_3" formatted="false">什么时候能看到收益？ 转入资金在第二个自然日早上8点可以看到收益；  温馨提示：建议铜宝持有金额为100元以上，可以每日看到收益。 铜宝转出至银行卡有次数和额度限制吗？ 铜宝转出至账户余额或银行卡，分为普通到账和快速到账两种方式。普通到账没有次数和额度限制，快速到账每日有次数和额度限制，具体以《定向委托投资管理协议》规则为准。</string>
    <string name="tongbao_today_assets_unit">今日收益 (元)</string>
    <string name="tongbao_check_total_profit">查看累计收益</string>
    <string name="tongbao_available_assets_unit">可用金额 (元)</string>
    <string name="tongbao_lock_amount_unit">锁定金额 (元)</string>
    <string name="zore_assets">0.00</string>
    <string name="github_address">我的github地址：https://github.com/robotlife</string>
</resources>
