<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_backgroud"
    android:orientation="vertical">

    <com.robot.tongbanjie.widget.TitleBarView
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10.0dip"
        android:gravity="center_horizontal"
        android:text="注意事项："
        android:textColor="@color/black_common"
        android:textSize="@dimen/common_font_size_small"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10.0dip"
        android:text="@string/risk1"
        android:textColor="@color/black_common"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10.0dip"
        android:text="@string/risk2"
        android:textColor="@color/black_common"
        android:textSize="14sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10.0dip"
        android:text="@string/risk3"
        android:textColor="@color/black_common"
        android:textSize="14sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10.0dip"
        android:text="@string/risk4"
        android:textColor="@color/black_common"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10.0dip"
        android:text="@string/risk5"
        android:textColor="@color/black_common"
        android:textSize="14sp" />


    <Button
        android:id="@+id/evaluate_risk"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingBottom="5dp"
        android:text="开始填写问卷"
        android:background="@drawable/btn_common_sel"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:paddingTop="5dp" />

</LinearLayout>